--- a/index.Rmd
+++ b/index.Rmd
@@ -35,3 +35,11 @@ This companion follows the [R4DS Online Learning Community Code of Conduct](http
 - We'll _try_ to cover 1 chapter/week, but...
 - ...It's ok to split chapters when they feel like too much.
 - We will try to meet every week, but will likely take some breaks for holidays, etc.
+
+**Following the flow!** 
+
+![](image/flow.png){width="560" height="315"}
+
+Source: https://www.youtube.com/watch?v=zYYBtxHWE0A  
+From: Richard McElreath, Statistical Rethinking videos  
+
