--- a/01.Rmd
+++ b/01.Rmd
@@ -137,6 +137,15 @@ This is a list of resources mentioned in the first meeting!
 
 - The "puppy" book by John K. Kruschke : https://sites.google.com/site/doingbayesiandataanalysis/
 
+- [Introduction to Bayesian Thinking, Clyde, Centinkaya-Rundel et al](https://statswithr.github.io/book/index.html) similar level to our book
+
+- [Bayesian Data Analysis, Andrew Gelman](http://www.stat.columbia.edu/~gelman/book/BDA3.pdf) more precise (and mathematical)
+
+-	[Intro to Bayes Theorem, Wrath of Math, video](https://www.youtube.com/watch?v=3sJn5-Cjm2s)
+	Clear explanation of the meaning of `given` in statements like probability
+	of A given B. $ P(A | B) $
+
+
 ### Drawing DAG (Directed Acyclic Graph)
 
 - Pen and paper  
