--- a/06.Rmd
+++ b/06.Rmd
@@ -13,6 +13,10 @@
 
 ### Cohort 1
 
+`r knitr::include_url("https://www.youtube.com/embed/JwlQh3eVuB8")`
+
+### Cohort 2
+
 `r knitr::include_url("https://www.youtube.com/embed/URL")`
 
 <details>
